grammar/.antlr/CopperSimpleParser.java
// Generated from /home/surya/code/copper/grammar/CopperSimple.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CopperSimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODEL=1, VIEW=2, DIMENSION=3, MEASURE=4, JOIN=5, FROM=6, EXTENDS=7, TYPE=8, 
		EXPRESSION=9, PRIMARY_KEY=10, VALUE_FORMAT=11, LABEL=12, DESCRIPTION=13, 
		HIDDEN_PARAM=14, TIERS=15, SQL_LATITUDE=16, SQL_LONGITUDE=17, UNITS=18, 
		RELATIONSHIP=19, STRING_TYPE=20, NUMBER_TYPE=21, DATE_TYPE=22, DATE_TIME_TYPE=23, 
		YESNO_TYPE=24, TIER_TYPE=25, BIN_TYPE=26, LOCATION_TYPE=27, ZIPCODE_TYPE=28, 
		DISTANCE_TYPE=29, DURATION_TYPE=30, TIME_TYPE=31, UNQUOTED_TYPE=32, COUNT_TYPE=33, 
		SUM_TYPE=34, AVERAGE_TYPE=35, MIN_TYPE=36, MAX_TYPE=37, COUNT_DISTINCT_TYPE=38, 
		MEDIAN_TYPE=39, PERCENTILE_TYPE=40, ONE_TO_ONE=41, ONE_TO_MANY=42, MANY_TO_ONE=43, 
		MANY_TO_MANY=44, YES=45, NO=46, USD=47, PERCENT=48, PERCENT_1=49, PERCENT_2=50, 
		COLON=51, SEMICOLON=52, LBRACE=53, RBRACE=54, LBRACKET=55, RBRACKET=56, 
		COMMA=57, IDENTIFIER=58, INTEGER=59, STRING_LITERAL=60, DAX_EXPRESSION=61, 
		COMMENT=62, NEWLINE=63, WS=64;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_comment = 2, RULE_modelStatement = 3, 
		RULE_modelBody = 4, RULE_dimensionStatement = 5, RULE_measureStatement = 6, 
		RULE_dimensionParameter = 7, RULE_measureParameter = 8, RULE_viewStatement = 9, 
		RULE_viewBody = 10, RULE_joinStatement = 11, RULE_joinParameter = 12, 
		RULE_typeParameter = 13, RULE_expressionParameter = 14, RULE_labelParameter = 15, 
		RULE_descriptionParameter = 16, RULE_primaryKeyParameter = 17, RULE_hiddenParameter = 18, 
		RULE_valueFormatParameter = 19, RULE_tiersParameter = 20, RULE_sqlLatitudeParameter = 21, 
		RULE_sqlLongitudeParameter = 22, RULE_unitsParameter = 23, RULE_fromParameter = 24, 
		RULE_extendsParameter = 25, RULE_relationshipParameter = 26, RULE_typeValue = 27, 
		RULE_relationshipValue = 28, RULE_booleanValue = 29, RULE_stringValue = 30, 
		RULE_formatValue = 31, RULE_arrayValue = 32, RULE_daxExpression = 33, 
		RULE_identifier = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "comment", "modelStatement", "modelBody", "dimensionStatement", 
			"measureStatement", "dimensionParameter", "measureParameter", "viewStatement", 
			"viewBody", "joinStatement", "joinParameter", "typeParameter", "expressionParameter", 
			"labelParameter", "descriptionParameter", "primaryKeyParameter", "hiddenParameter", 
			"valueFormatParameter", "tiersParameter", "sqlLatitudeParameter", "sqlLongitudeParameter", 
			"unitsParameter", "fromParameter", "extendsParameter", "relationshipParameter", 
			"typeValue", "relationshipValue", "booleanValue", "stringValue", "formatValue", 
			"arrayValue", "daxExpression", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'model'", "'view'", "'dimension'", "'measure'", "'join'", "'from'", 
			"'extends'", "'type'", "'expression'", "'primary_key'", "'value_format'", 
			"'label'", "'description'", "'hidden'", "'tiers'", "'sql_latitude'", 
			"'sql_longitude'", "'units'", "'relationship'", "'string'", "'number'", 
			"'date'", "'date_time'", "'yesno'", "'tier'", "'bin'", "'location'", 
			"'zipcode'", "'distance'", "'duration'", "'time'", "'unquoted'", "'count'", 
			"'sum'", "'average'", "'min'", "'max'", "'count_distinct'", "'median'", 
			"'percentile'", "'one_to_one'", "'one_to_many'", "'many_to_one'", "'many_to_many'", 
			"'yes'", "'no'", "'usd'", "'percent'", "'percent_1'", "'percent_2'", 
			"':'", "';'", "'{'", "'}'", "'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MODEL", "VIEW", "DIMENSION", "MEASURE", "JOIN", "FROM", "EXTENDS", 
			"TYPE", "EXPRESSION", "PRIMARY_KEY", "VALUE_FORMAT", "LABEL", "DESCRIPTION", 
			"HIDDEN_PARAM", "TIERS", "SQL_LATITUDE", "SQL_LONGITUDE", "UNITS", "RELATIONSHIP", 
			"STRING_TYPE", "NUMBER_TYPE", "DATE_TYPE", "DATE_TIME_TYPE", "YESNO_TYPE", 
			"TIER_TYPE", "BIN_TYPE", "LOCATION_TYPE", "ZIPCODE_TYPE", "DISTANCE_TYPE", 
			"DURATION_TYPE", "TIME_TYPE", "UNQUOTED_TYPE", "COUNT_TYPE", "SUM_TYPE", 
			"AVERAGE_TYPE", "MIN_TYPE", "MAX_TYPE", "COUNT_DISTINCT_TYPE", "MEDIAN_TYPE", 
			"PERCENTILE_TYPE", "ONE_TO_ONE", "ONE_TO_MANY", "MANY_TO_ONE", "MANY_TO_MANY", 
			"YES", "NO", "USD", "PERCENT", "PERCENT_1", "PERCENT_2", "COLON", "SEMICOLON", 
			"LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COMMA", "IDENTIFIER", "INTEGER", 
			"STRING_LITERAL", "DAX_EXPRESSION", "COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CopperSimple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CopperSimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CopperSimpleParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MODEL) | (1L << VIEW) | (1L << COMMENT) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ModelStatementContext modelStatement() {
			return getRuleContext(ModelStatementContext.class,0);
		}
		public ViewStatementContext viewStatement() {
			return getRuleContext(ViewStatementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(CopperSimpleParser.NEWLINE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				modelStatement();
				}
				break;
			case VIEW:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				viewStatement();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				comment();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(CopperSimpleParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelStatementContext extends ParserRuleContext {
		public TerminalNode MODEL() { return getToken(CopperSimpleParser.MODEL, 0); }
		public TerminalNode COLON() { return getToken(CopperSimpleParser.COLON, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CopperSimpleParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CopperSimpleParser.RBRACE, 0); }
		public List<ModelBodyContext> modelBody() {
			return getRuleContexts(ModelBodyContext.class);
		}
		public ModelBodyContext modelBody(int i) {
			return getRuleContext(ModelBodyContext.class,i);
		}
		public ModelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelStatement; }
	}

	public final ModelStatementContext modelStatement() throws RecognitionException {
		ModelStatementContext _localctx = new ModelStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_modelStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(MODEL);
			setState(87);
			match(COLON);
			setState(88);
			identifier();
			setState(89);
			match(LBRACE);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIMENSION) | (1L << MEASURE) | (1L << COMMENT) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(90);
				modelBody();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelBodyContext extends ParserRuleContext {
		public DimensionStatementContext dimensionStatement() {
			return getRuleContext(DimensionStatementContext.class,0);
		}
		public MeasureStatementContext measureStatement() {
			return getRuleContext(MeasureStatementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(CopperSimpleParser.NEWLINE, 0); }
		public ModelBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelBody; }
	}

	public final ModelBodyContext modelBody() throws RecognitionException {
		ModelBodyContext _localctx = new ModelBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modelBody);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIMENSION:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				dimensionStatement();
				}
				break;
			case MEASURE:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				measureStatement();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				comment();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimensionStatementContext extends ParserRuleContext {
		public TerminalNode DIMENSION() { return getToken(CopperSimpleParser.DIMENSION, 0); }
		public TerminalNode COLON() { return getToken(CopperSimpleParser.COLON, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CopperSimpleParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CopperSimpleParser.RBRACE, 0); }
		public List<DimensionParameterContext> dimensionParameter() {
			return getRuleContexts(DimensionParameterContext.class);
		}
		public DimensionParameterContext dimensionParameter(int i) {
			return getRuleContext(DimensionParameterContext.class,i);
		}
		public DimensionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionStatement; }
	}

	public final DimensionStatementContext dimensionStatement() throws RecognitionException {
		DimensionStatementContext _localctx = new DimensionStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dimensionStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(DIMENSION);
			setState(105);
			match(COLON);
			setState(106);
			identifier();
			setState(107);
			match(LBRACE);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE) | (1L << EXPRESSION) | (1L << PRIMARY_KEY) | (1L << VALUE_FORMAT) | (1L << LABEL) | (1L << DESCRIPTION) | (1L << HIDDEN_PARAM) | (1L << TIERS) | (1L << SQL_LATITUDE) | (1L << SQL_LONGITUDE) | (1L << UNITS) | (1L << COMMENT) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(108);
				dimensionParameter();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeasureStatementContext extends ParserRuleContext {
		public TerminalNode MEASURE() { return getToken(CopperSimpleParser.MEASURE, 0); }
		public TerminalNode COLON() { return getToken(CopperSimpleParser.COLON, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CopperSimpleParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CopperSimpleParser.RBRACE, 0); }
		public List<MeasureParameterContext> measureParameter() {
			return getRuleContexts(MeasureParameterContext.class);
		}
		public MeasureParameterContext measureParameter(int i) {
			return getRuleContext(MeasureParameterContext.class,i);
		}
		public MeasureStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measureStatement; }
	}

	public final MeasureStatementContext measureStatement() throws RecognitionException {
		MeasureStatementContext _localctx = new MeasureStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_measureStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(MEASURE);
			setState(117);
			match(COLON);
			setState(118);
			identifier();
			setState(119);
			match(LBRACE);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE) | (1L << EXPRESSION) | (1L << VALUE_FORMAT) | (1L << LABEL) | (1L << DESCRIPTION) | (1L << HIDDEN_PARAM) | (1L << UNITS) | (1L << COMMENT) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(120);
				measureParameter();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimensionParameterContext extends ParserRuleContext {
		public TypeParameterContext typeParameter() {
			return getRuleContext(TypeParameterContext.class,0);
		}
		public ExpressionParameterContext expressionParameter() {
			return getRuleContext(ExpressionParameterContext.class,0);
		}
		public LabelParameterContext labelParameter() {
			return getRuleContext(LabelParameterContext.class,0);
		}
		public DescriptionParameterContext descriptionParameter() {
			return getRuleContext(DescriptionParameterContext.class,0);
		}
		public PrimaryKeyParameterContext primaryKeyParameter() {
			return getRuleContext(PrimaryKeyParameterContext.class,0);
		}
		public HiddenParameterContext hiddenParameter() {
			return getRuleContext(HiddenParameterContext.class,0);
		}
		public ValueFormatParameterContext valueFormatParameter() {
			return getRuleContext(ValueFormatParameterContext.class,0);
		}
		public TiersParameterContext tiersParameter() {
			return getRuleContext(TiersParameterContext.class,0);
		}
		public SqlLatitudeParameterContext sqlLatitudeParameter() {
			return getRuleContext(SqlLatitudeParameterContext.class,0);
		}
		public SqlLongitudeParameterContext sqlLongitudeParameter() {
			return getRuleContext(SqlLongitudeParameterContext.class,0);
		}
		public UnitsParameterContext unitsParameter() {
			return getRuleContext(UnitsParameterContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(CopperSimpleParser.NEWLINE, 0); }
		public DimensionParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionParameter; }
	}

	public final DimensionParameterContext dimensionParameter() throws RecognitionException {
		DimensionParameterContext _localctx = new DimensionParameterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dimensionParameter);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				typeParameter();
				}
				break;
			case EXPRESSION:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				expressionParameter();
				}
				break;
			case LABEL:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				labelParameter();
				}
				break;
			case DESCRIPTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				descriptionParameter();
				}
				break;
			case PRIMARY_KEY:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				primaryKeyParameter();
				}
				break;
			case HIDDEN_PARAM:
				enterOuterAlt(_localctx, 6);
				{
				setState(133);
				hiddenParameter();
				}
				break;
			case VALUE_FORMAT:
				enterOuterAlt(_localctx, 7);
				{
				setState(134);
				valueFormatParameter();
				}
				break;
			case TIERS:
				enterOuterAlt(_localctx, 8);
				{
				setState(135);
				tiersParameter();
				}
				break;
			case SQL_LATITUDE:
				enterOuterAlt(_localctx, 9);
				{
				setState(136);
				sqlLatitudeParameter();
				}
				break;
			case SQL_LONGITUDE:
				enterOuterAlt(_localctx, 10);
				{
				setState(137);
				sqlLongitudeParameter();
				}
				break;
			case UNITS:
				enterOuterAlt(_localctx, 11);
				{
				setState(138);
				unitsParameter();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 12);
				{
				setState(139);
				comment();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 13);
				{
				setState(140);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeasureParameterContext extends ParserRuleContext {
		public TypeParameterContext typeParameter() {
			return getRuleContext(TypeParameterContext.class,0);
		}
		public ExpressionParameterContext expressionParameter() {
			return getRuleContext(ExpressionParameterContext.class,0);
		}
		public LabelParameterContext labelParameter() {
			return getRuleContext(LabelParameterContext.class,0);
		}
		public DescriptionParameterContext descriptionParameter() {
			return getRuleContext(DescriptionParameterContext.class,0);
		}
		public HiddenParameterContext hiddenParameter() {
			return getRuleContext(HiddenParameterContext.class,0);
		}
		public ValueFormatParameterContext valueFormatParameter() {
			return getRuleContext(ValueFormatParameterContext.class,0);
		}
		public UnitsParameterContext unitsParameter() {
			return getRuleContext(UnitsParameterContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(CopperSimpleParser.NEWLINE, 0); }
		public MeasureParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measureParameter; }
	}

	public final MeasureParameterContext measureParameter() throws RecognitionException {
		MeasureParameterContext _localctx = new MeasureParameterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_measureParameter);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				typeParameter();
				}
				break;
			case EXPRESSION:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				expressionParameter();
				}
				break;
			case LABEL:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				labelParameter();
				}
				break;
			case DESCRIPTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				descriptionParameter();
				}
				break;
			case HIDDEN_PARAM:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				hiddenParameter();
				}
				break;
			case VALUE_FORMAT:
				enterOuterAlt(_localctx, 6);
				{
				setState(148);
				valueFormatParameter();
				}
				break;
			case UNITS:
				enterOuterAlt(_localctx, 7);
				{
				setState(149);
				unitsParameter();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 8);
				{
				setState(150);
				comment();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 9);
				{
				setState(151);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
